--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <a href="#">services</a>
         <a href="#">FAQ</a>
     </div>
+    <div>
+        <p>Odubo Timidi James</p>
+    </div>
+    <p>exhibit
+        
+    </p>
 </nav>
 
 </html>
